[package]
name = "cms"
version = "0.0.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
chrono = "0.4"
git2 = "0.19"
juniper = { version = "0.16", features = ["schema-language"] }
juniper_rocket = "0.9"
regex = "1.10"
rocket = "0.5"
rocket_cors = "0.6"
serde = "1.0"
toml = "0.8"
yaml-front-matter = "0.1.0"
