[package]
name = "cms"
version = "0.0.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
chrono = "0.4"
git2 = "0.19"
juniper = { version = "0.17", features = ["schema-language"] }
juniper_axum = "0.3"
axum = { version = "0.8", features = ["http2"] }
regex = "1.12"
serde = "1.0"
toml = "0.8"
yaml-front-matter = "0.1.0"
tokio = { version = "1.49.0", features = ["fs", "io-util", "rt-multi-thread"] }
tracing-subscriber = "0.3.22"
tracing = "0.1.44"
tower-http = { version = "0.6.8", features = ["trace", "cors"] }
tokio-util = "0.7.18"
futures-util = "0.3.31"
